# fai-demo

./: .env.production.example  .gitignore  AGENTS.md  DEMO.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/fai/: app.py  config.py  runtime.py
backend/fai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/fai/analysis/: __init__.py  ioc_extractor.py  llm_client.py  mitre_mapper.py  prompts.py  threat_intel.py
backend/fai/api/: __init__.py  approvals.py  audit.py  incidents.py  ioc.py  mitre.py  schemas.py  settings.py  stream.py
backend/fai/core/: __init__.py  audit.py  chain_of_custody.py  events.py  models.py
backend/fai/ingestion/: __init__.py  siem_consumer.py
backend/fai/mitre/: __init__.py  loader.py
backend/fai/mocks/: __init__.py  mock_host.py  mock_siem.py  mock_soar.py
backend/fai/orchestrator/: __init__.py  approval_gate.py  dispatcher.py  incident_store.py  ioc_review_gate.py  phishing.py  playbook.py  ransomware.py
backend/fai/reporting/: __init__.py  generator.py
backend/tests/: test_analysis.py  test_audit.py  test_chain_of_custody.py  test_e2e_phishing.py  test_e2e_ransomware.py  test_events.py  test_healthz.py  test_mock_host.py  test_mock_siem.py  test_mock_soar.py  test_models.py  test_siem_consumer.py
data/: _generate.py  misp_fallback.json
frontend/: Dockerfile  Dockerfile.prod  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
nginx/: nginx.conf
prompts/: 00_repo_bootstrap.md  (+6 more)
(+67 files in other folders)
